[package]
name = "ghostdrop"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Windows shellcode execution tool for red team operations"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "memoryapi"] }
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "memoryapi"] } 